# propmubi

./: .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml  package.json  vercel.json
apps/api/: Dockerfile  database.py  main.py  pyproject.toml  trending_data.json
apps/api/routers/: agent.py  auth.py  builder_crm.py  content.py  crm.py  ingest.py  inspections.py  lead_management.py  legal.py  projects.py
apps/api/scrapers/: trending.py
apps/api/seeds/: mangala.geojson  poi.json
apps/api/services/: reputation.py  trust.py
apps/api/shared/domain/: agent_models.py  auth_models.py  crm_models.py  property_models.py
apps/api/tests/: test_engines.py
database/: 001_initial_schema.sql
docs/: 3.md  ACCESS_URLS.md  AI_AGENT_PROMPTS.md  BUILDER_SITE_COMPLETE.md  CLEANUP_VERIFICATION_REPORT.md  COMPLETE_IMPLEMENTATION_LISTING.md  DESIGN.md  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_INDEX.md  DOMAIN_MODELS_COMPLETION_SUMMARY.md  DOMAIN_MODELS_README.md  DOMAIN_MODEL_BACKEND_API.md  DOMAIN_MODEL_DATABASE.md  DOMAIN_MODEL_MASTER.md  DOMAIN_MODEL_UI.md  ECOSYSTEM.md  FEATURES_UI_VERIFICATION.md  FIXES_APPLIED.md  Full_website.md  IMPLEMENTATION_INDEX.md  IMPLEMENTATION_PROGRESS_TRACKER.md  IMPLEMENTATION_TASKS_DAG.md  INTEGRATION_QUICKSTART.md  INTEGRATION_SUMMARY.md  MANIFESTO_STATUS.md  PARALLEL_AGENT_ORCHESTRATION.md  PHASE_2_FINAL_REPORT.md  PHASE_3_1_REPORT.md  PHASE_3_2_REPORT.md  PHASE_3_PLAN.md  PLAYWRIGHT_TEST_RESULTS.md  PORT_CONFIG.md  PROJECT_OVERVIEW.md  QUICKSTART.md  QUICK_START_GUIDE.md  README.md  SATELLITE_MAP_ENHANCEMENT.md  SERVICES_SHOWCASE.md  (+5 more)
(+274 files in other folders)
