[tool.poetry]
name = "propmubi-api"
version = "0.1.0"
description = "PropMubi Trust OS Backend API"
authors = ["PropMubi Agent <agent@propmubi.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
asyncpg = "^0.29.0"
geoalchemy2 = "^0.14.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
shapely = "^2.0.2"
beautifulsoup4 = "^4.12.0"
requests = "^2.31.0"
python-multipart = "^0.0.20"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.4"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
